--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "next-video": "^2.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
