--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
     "typescript": "5.6.3"
+  },
+  "scripts": {
+    "dev": "next dev & npx next-video sync -w"
   }
 }
